# pipe-practice

./: .gitignore  CMakeLists.txt  d1.txt  p1.txt
cmake/: CodeCoverage.cmake
doc/: Doxyfile.in
examples/: CMakeLists.txt
inc/: errorReturn.c  errorReturn.h  protocol.c  protocol.h
src/: CMakeLists.txt  main.cpp
src-2310A/: CMakeLists.txt  main.c
src-2310B/: CMakeLists.txt  main.c
src-2310dealer/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  tests.cpp
